--- a/ansible/inventory/hosts.ini
+++ b/ansible/inventory/hosts.ini
@@ -13,6 +13,8 @@ workers
 ansible_user=vagrant
 ansible_ssh_private_key_file=~/.ssh/id_rsa
 ansible_python_interpreter=/usr/bin/python3
-kubernetes_version=1.31
+kubernetes_version=v1.31
+crio_version=v1.31
+crictl_version=v1.31.1
 pod_network_cidr=10.244.0.0/16
 service_cidr=10.96.0.0/12
