ansible 05 playbook tested - metallb,traefik,prometeus, grafana

--- a/ansible/inventory/hosts.ini
+++ b/ansible/inventory/hosts.ini
@@ -18,3 +18,5 @@ crio_version=v1.31
 crictl_version=v1.31.1
 pod_network_cidr=10.244.0.0/16
 service_cidr=10.96.0.0/12
+metallb_version=v0.14.8
+metallb_ip_range=192.168.56.100-192.168.56.110
